--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongoURI="mongodb://BenboubakerMajdi:Majdi123@ac-hnnlasn-shard-00-00.ywugzof.mongodb.net:27017,ac-hnnlasn-shard-00-01.ywugzof.mongodb.net:27017,ac-hnnlasn-shard-00-02.ywugzof.mongodb.net:27017/?replicaSet=atlas-aok5aw-shard-0&ssl=true&authSource=admin"
+mongoURI="mongodb://AyaBelhadj:MTRCEmK4fqN3F7UV@ac-hnnlasn-shard-00-00.ywugzof.mongodb.net:27017,ac-hnnlasn-shard-00-01.ywugzof.mongodb.net:27017,ac-hnnlasn-shard-00-02.ywugzof.mongodb.net:27017/?replicaSet=atlas-aok5aw-shard-0&ssl=true&authSource=admin"
